--- a/templates/login.html
+++ b/templates/login.html
@@ -5,5 +5,6 @@
     <label for="name">Your Name:</label>
     <input type="text" id="name" name="name" required>
     <button type="submit">Start Session</button>
+    <p style="font-size:small;">Use the same name as before to continue your history.</p>
 </form>
 {% endblock %}
